--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <link rel="stylesheet" href="build/css/vendor.css">
-    <script src="build/js/vendor.min.js"></script>
-    <script type="text/javascript" src="build/js/app.js"></script>
+   <link rel="stylesheet" href="build/css/styles.css">
+   <script src="build/js/vendor.min.js"></script>
+   <script type="text/javascript" src="build/js/app.js"></script>
     <title>Doctor</title>
   </head>
   <body>
