atempt to fix bug

--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
     <title>Doctor</title>
   </head>
   <body>
-    <form id="doctor-form">
-      <label for="sickness">input a sickness and get back a doctor recomentdation</label>
-      <input id="sickness" type="text" placeholder="ex. toothache">
-      <button type="submit" name="button">Find!!</button>
-    </form>
-    <p class="results">
-      Your Doctor Recomentdation for -><span class="input">your input</span><- is -><span class="result">your recomendation (a error might end up here instead)</span><-
-    </p>
+    <div class="container box">
+      <form id="doctor-form">
+        <label for="sickness">input a sickness and get back a doctor recomentdation</label>
+        <input id="sickness" type="text" placeholder="ex. toothache">
+        <button type="submit" class="button">Find!!</button>
+      </form>
+      <p class="results">
+        Your Doctor Recomentdation for -><span class="input">your input</span><- is -><span class="result">your recomendation (a error might end up here instead)</span><-
+      </p>
+    </div>
   </body>
 </html>
