fix bug, in a ready state

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <body>
     <div class="container box">
       <form id="doctor-form">
-        <label for="sickness">input a sickness and get back a doctor recomentdation</label>
-        <input id="sickness" type="text" placeholder="ex. toothache">
+        <label for="sickness">input a Keyword and get back 20 results</label>
+        <input id="sickness" type="text">
         <button type="submit" class="button">Find!!</button>
       </form>
       <p class="results">
-        Your Doctor Recomentdation for -><span class="input">your input</span><- is -><span class="result">your recomendation (a error might end up here instead)</span><-
+        Your Doctor Recomentdation for <span class="input">your input</span> is <span class="result">your recomendation (a error might end up here instead)</span>
       </p>
     </div>
   </body>
