add a fix to grammer and readme.md

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <body>
     <div class="container box">
       <form id="doctor-form">
-        <label for="sickness">input a Keyword and get back 20 results</label>
+        <label for="sickness">A Doctor Keyword Search</label>
         <input id="sickness" type="text">
-        <button type="submit" class="button">Find!!</button>
+        <button type="submit" class="button">Get Results</button>
       </form>
       <p class="results">
-        Your Doctor Recomentdation for <span class="input">your input</span> is <span class="result">your recomendation (a error might end up here instead)</span>
+        Your Doctor Results for <span class="input">your Keyword</span> is <span class="result">your results (a error message will be placed here if api has issues)</span>
       </p>
     </div>
   </body>
